--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="signin_google_title">SignIn use with Google account</string>
     <string name="signingin">Signing in</string>
     <string name="signout">Sign Out</string>
+    <string name="admin_page">Admin Page</string>
+    <string name="conferences">Conferences</string>
+    <string name="tab_topics">Topics</string>
+    <string name="tab_participants">Participants</string>
+    <string name="tab_topics_request">Requested Topics</string>
 </resources>
